Add pretrained network, revide notebook

--- a/ipynb/ECSAM_MNIST_JN_TF2.ipynb
+++ b/ipynb/ECSAM_MNIST_JN_TF2.ipynb
@@ -9,13 +9,13 @@
         "# MNIST on the Jetson Nano (JN)\n",
         "The model below is an example of a very simple network for handwritten digits recognition using ReLU6 as an activation layer. The ReLU6 layer is not directly supported in the TensorRT APIs. Therefore you will provide a CUDA implementation of the corresponding plugin.\n",
         "\n",
-        "Before this step, you have to train a network and import the .pb file in JN. You have two options:\n",
+        "Before this step, you have to train a network and import the `.pb` file in JN. You have three options:\n",
         "\n",
-        "1.   train and then use the model below in the JN;\n",
-        "2.   train a network of your choice also using ReLU6 (after flattening) and - if you feel like - possibly other TensorRT unsopported layers; then use your network in the JN.\n",
+        "1.   use the pretrained network you find. Just rename it as `trained_lenet5.pb`\n",
+        "2.   train and then use the model below in the JN;\n",
+        "3.   train a network of your choice also using ReLU6 (after flattening) and - if you feel like - possibly other TensorRT unsopported layers; then use your network in the JN. Because of limited computing powers and lab hours, if you decide to go this route, **make sure to design and train your network beforehand!**\n",
         "\n",
-        "\n",
-        "First of all, copy this Notebook in your Google Drive: File -> Save a copy to Drive. If you choose the first option above you can then directly run the Notebook and download the .pb file. If you choose the second option, you have to first replace the network with yours and validate it (i.e. it must be at least 98% accurate on the MNIST dataset).\n",
+        "If you choose the first option above, you can directly run the Notebook and download the `.pb` file. If you choose the second option, you have to first replace the network with yours and validate it (i.e., it must be at least $98\\%$ accurate on the MNIST dataset).\n",
         "\n",
         "Note that to speed up this part we have chosen a very simple network (an MLP) and we are doing a quick-an-dirty suboptimal training. This is in fact not the goal here. Instead we want to quickly deploy the network on the JN and run inference with it.\n"
       ]
